@@ -1,3 +1,8 @@
+2008-12-29  Kurt Biery <biery@fnal.gov>
+
+	* tag V04-02-02
+	* Brought forward the additional DQM statistics from Harry.
+
 2008-12-22  Kurt Biery <biery@fnal.gov>
 
 	* tag V04-02-01
